# rsagent

./: Cargo.toml  config.example.toml  flake.nix
examples/: nixos-configuration.nix  ser5-max-observability-tools.toml
nix/: nixos-module.nix  package.nix
src/: agent.rs  config.rs  error.rs  main.rs  registry.rs
src/backends/: command.rs  docker.rs  fail2ban.rs  gluster.rs  host.rs  http_client.rs  http_health.rs  journal.rs  mod.rs  observability.rs  systemd.rs  tailscale.rs  url_util.rs  zfs.rs
