[package]
name = "rsagent"
version = "0.1.0"
edition = "2021"
description = "Config-defined server agent CLI powered by aisdk"
license = "MIT"

[features]
default = []
systemd = ["dep:zbus", "dep:zbus_systemd", "dep:journald-query"]
docker = ["dep:bollard"]

[dependencies]
aisdk = { version = "0.5.2", features = ["fireworks-ai", "language-model-request"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
url = "2"
urlencoding = "2"
ureq = { version = "2" }

[target.'cfg(target_os = "linux")'.dependencies]
bollard = { version = "0.18", optional = true, default-features = false, features = ["chrono"] }
journald-query = { version = "0.1", optional = true }
zbus = { version = "5", optional = true, default-features = false, features = ["tokio"] }
zbus_systemd = { version = "=0.26000.0", optional = true, default-features = false, features = ["systemd1", "zbus-async-tokio"] }

[profile.release]
lto = true
codegen-units = 1
